@@ -19,12 +19,14 @@ the same workflow, for as long as your current Bricolage session lasts.</p>
     restart your search with a fresh page, click <em>Clear Values.</em></dd>
 
 <dt>Stories Found</dt>
-<dd>Click <em>View</em> next to the desired story to view its profile. If the
-    story is not checked out to another user or in a different workflow,
-    select the <q>Checkout</q> checkbox and click the <em>Checkout</em> button
-    at the bottom of the page to check out the story and move it to your
-    workspace. If you have already checked it out, click <em>Edit</em> to
-    access its profile.</dd>
+<dd>Click <em>View</em> next to the desired story to view its profile.
+    Click <em>Log</em> to see the event log for this story. If the story is
+    not checked out to another user or in a different workflow, select
+    the <q>Checkout</q> checkbox and click the <em>Checkout</em> button at the
+    bottom of the page to check out the story and move it to your workspace.
+    To republish the story, select the <q>Republish</q> checkbox and click
+    the <em>Republish</em> button at the bottom of the page. If you have
+    already checked it out, click <em>Edit</em> to access its profile.</dd>
 
 <dt>Create a New Story</dt>
 <dd>If you can't find what you need in the existing Stories, why not create a
